// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge colors renders a default badge 1`] = `
<span
  className="slds-badge"
>
  Lovely badge
</span>
`;

exports[`Badge colors renders an inverse badge 1`] = `
<span
  className="slds-badge slds-badge_inverse"
>
  Lovely badge
</span>
`;

exports[`Badge colors renders badge 1`] = `
<span
  className="slds-badge slds-badge_lightest"
>
  Light
</span>
`;

exports[`Badge with icons renders badge with icon only 1`] = `
<span
  className="slds-badge slds-badge_lightest"
>
  <span
    className="slds-badge__icon slds-badge__icon_left"
  >
    <span
      className="slds-icon_container slds-icon-utility-world slds-current-color"
      title="Description of icon when needed"
    >
      <svg
        aria-hidden={true}
        className="slds-icon slds-icon_xx-small"
      >
        <use
          xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#world"
        />
      </svg>
      <span
        className="slds-assistive-text"
      >
        assistive text goes here, do it!
      </span>
    </span>
  </span>
</span>
`;

exports[`Badge with icons renders badge with left icon 1`] = `
<span
  className="slds-badge slds-badge_lightest"
>
  <span
    className="slds-badge__icon slds-badge__icon_left"
  >
    <span
      className="slds-icon_container slds-icon-utility-world slds-current-color"
      title="Description of icon when needed"
    >
      <svg
        aria-hidden={true}
        className="slds-icon slds-icon_xx-small"
      >
        <use
          xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#world"
        />
      </svg>
    </span>
  </span>
  Icon on the left
</span>
`;

exports[`Badge with icons renders badge with right icon 1`] = `
<span
  className="slds-badge slds-badge_lightest"
>
  Icon on the right
  <span
    className="slds-badge__icon slds-badge__icon_left"
  >
    <span
      className="slds-icon_container slds-icon-utility-world slds-current-color"
      title="Description of icon when needed"
    >
      <svg
        aria-hidden={true}
        className="slds-icon slds-icon_xx-small"
      >
        <use
          xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#world"
        />
      </svg>
    </span>
  </span>
</span>
`;

exports[`Badge with icons renders deprecated badge with icon only 1`] = `
<span
  className="slds-badge slds-badge_lightest"
>
  <span
    className="slds-icon_container slds-icon-utility-world"
    title="Description of icon when needed"
  >
    <svg
      aria-hidden={true}
      className="slds-icon slds-icon_xx-small slds-icon-text-default"
    >
      <use
        xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#world"
      />
    </svg>
    <span
      className="slds-assistive-text"
    >
      assistive text goes here, do it!
    </span>
  </span>
</span>
`;

exports[`Badge with icons renders deprecated badge with right icon 1`] = `
<span
  className="slds-badge slds-badge_lightest"
>
  Icon on the right
  <span
    className="slds-icon_container slds-icon-utility-world slds-m-left_xx-small"
    title="Description of icon when needed"
  >
    <svg
      aria-hidden={true}
      className="slds-icon slds-icon_xx-small slds-icon-text-default"
    >
      <use
        xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#world"
      />
    </svg>
  </span>
</span>
`;
